# clang-reflect

./: CMakeLists.txt  LICENSE.txt  README.md
clang-reflect/: CMakeLists.txt
clang-reflect/inc/: ASTParser.h  ClangDriver.h  CommandLineParser.h  IncludesManager.h  ParamVarDeclsVisitor.h  ReflectableInterface.h
clang-reflect/src/: ClangDriver.cpp  ClangReflectActionFactory.cpp  ClangReflectDiagnosticConsumer.cpp  CommandLineParser.cpp  FindRecordDeclsVisitor.cpp  IncludesManager.cpp  cxxIncludeScanner.lex.c
dependencies/linux/include/clang/Basic/: DiagnosticCommonKinds.inc  DiagnosticLexKinds.inc  DiagnosticParseKinds.inc  DiagnosticSerializationKinds.inc  Version.inc
dependencies/linux/include/clang/Config/: config.h
dependencies/linux/include/llvm/Config/: llvm-config.h
dependencies/windows/clang-17.0.5.src/clang-tools-extra/clang-tidy/: ClangTidyCheck.h
dependencies/windows/clang-17.0.5.src/clang-tools-extra/clang-tidy/bugprone/: EasilySwappableParametersCheck.cpp
inc/: CMakeLists.txt  ClangReflectActionFactory.h  ClangReflectDiagnosticConsumer.h  Constants.h  FileManager.h  FindRecordDeclsVisitor.h  IncludesManager.h  Logger.h
src/: ASTParser.cpp  CMakeLists.txt  ClangDriver.cpp  ClangReflectActionFactory.cpp  ClangReflectDiagnosticConsumer.cpp  FileManager.cpp  IncludesManager.cpp  Logger.cpp  ParamVarDeclsVisitor.cpp  ReflectableInterface.cpp  clang-reflect-main.cpp
